--- a/lab1.html
+++ b/lab1.html
@@ -19,7 +19,17 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+   <script>	
+function clock(){
+ var date = new Date(),
+ hours = (date.getHours() < 10) ? '0' + date.getHours() : date.getHours(),
+ minutes = (date.getMinutes() < 10) ? '0' + date.getMinutes() : date.getMinutes(),
+ seconds = (date.getSeconds() < 10) ? '0' + date.getSeconds() : date.getSeconds();
+ document.getElementById('clock').innerHTML = hours + ':' + minutes + ':' + seconds;
+}
+setInterval(clock, 1000);
+clock();
+</script>
   
 </head>
 <body>
@@ -157,6 +167,7 @@
     </figure>
 </section>
 
+  <div id="clock"></div>
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
