create github pages

--- a/lab1.html
+++ b/lab1.html
@@ -19,17 +19,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-   <script>	
-function clock(){
- var date = new Date(),
- hours = (date.getHours() < 10) ? '0' + date.getHours() : date.getHours(),
- minutes = (date.getMinutes() < 10) ? '0' + date.getMinutes() : date.getMinutes(),
- seconds = (date.getSeconds() < 10) ? '0' + date.getSeconds() : date.getSeconds();
- document.getElementById('clock').innerHTML = hours + ':' + minutes + ':' + seconds;
-}
-setInterval(clock, 1000);
-clock();
-</script>
+  
   
 </head>
 <body>
@@ -58,8 +48,8 @@ clock();
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Перечень работ</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="lab1.html">Лабораторная 1</a><a class="text-white dropdown-item display-4" href="lab2.html" aria-expanded="false">Лабораторная 2</a><a class="text-white dropdown-item display-4" href="lab3.html" aria-expanded="false">Лабораторная 3</a><a class="text-white dropdown-item display-4" href="lab4.html" aria-expanded="false">Лабораторная 4</a></div>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Перечень работ</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="lab1.html">Лабораторная 1</a><a class="text-white dropdown-item display-4" href="lab2.html" aria-expanded="false">Лабораторная 2</a><a class="text-white dropdown-item display-4" href="lab3.html" aria-expanded="false">Лабораторная 3</a><a class="text-white dropdown-item display-4" href="lab4.html" aria-expanded="false">Лабораторная 4</a></div>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="dream_team.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>
                     
@@ -68,7 +58,7 @@ clock();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section content5 cid-rRYQrJ3Juf mbr-parallax-background" id="content5-d">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-rRYQrJ3Juf mbr-parallax-background" id="content5-d">
 
     
 
@@ -167,7 +157,6 @@ clock();
     </figure>
 </section>
 
-  <div id="clock"></div>
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
