--- a/dream_team.html
+++ b/dream_team.html
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Перечень работ</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="lab1.html">Лабораторная 1</a><a class="text-white dropdown-item display-4" href="lab2.html" aria-expanded="false">Лабораторная 2</a><a class="text-white dropdown-item display-4" href="lab3.html" aria-expanded="false">Лабораторная 3</a><a class="text-white dropdown-item display-4" href="lab4.html" aria-expanded="false">Лабораторная 4</a></div>
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Перечень работ</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="lab1.html">Лабораторная 1</a><a class="text-white dropdown-item display-4" href="lab2.html" aria-expanded="false">Лабораторная 2</a><a class="text-white dropdown-item display-4" href="lab3.html" aria-expanded="false">Лабораторная 3</a><a class="text-white dropdown-item display-4" href="lab4.html" aria-expanded="false">Лабораторная 4</a></div>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="dream_team.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>
                     
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-rSn2IyExUk mbr-parallax-background" id="content5-1l">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content5 cid-rSn2IyExUk mbr-parallax-background" id="content5-1l">
 
     
 
@@ -88,11 +88,10 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure pr-lg-5" style="width: 50%;">
-              <img src="assets/images/9-2-510x510.png" alt="" title="">
+              <a href="https://github.com/AnnKons"><img src="assets/images/9-2-510x510.png" alt="" title=""></a>
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>
-                       Консулова Анна</strong></p>
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>&lt;- Консулова Анна</strong></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">Владелец продукта</span></p>
                     <p class="mbr-author-desc mbr-fonts-style display-7">
                        Мастер</p>
@@ -111,7 +110,7 @@
         <div class="media-container-row">
             <div class="media-content px-3 align-self-center mbr-white py-2">
                 <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>
-                   Лякишева Марина</strong></p>
+                   Лякишева Марина -&gt;</strong></p>
                 <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">
                    Дизайнер</span></p>
                 <p class="mbr-author-desc mbr-fonts-style display-7">
@@ -119,7 +118,7 @@
             </div>
 
             <div class="mbr-figure pl-lg-5" style="width: 50%;">
-              <img src="assets/images/3-400x400.png" alt="" title="">
+              <a href="https://github.com/OculusDei"><img src="assets/images/3-400x400.png" alt="" title=""></a>
             </div>
         </div>
     </div>
@@ -134,11 +133,10 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure pr-lg-5" style="width: 50%;">
-              <img src="assets/images/12-510x510.png" alt="" title="">
+              <a href="https://github.com/Stio001"><img src="assets/images/12-510x510.png" alt="" title=""></a>
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>
-                       Рубцов Леонид</strong></p>
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>&lt;- Рубцов Леонид</strong></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">Аналитик</span></p>
                     <p class="mbr-author-desc mbr-fonts-style display-7"></p>
             </div>
@@ -156,7 +154,7 @@
         <div class="media-container-row">
             <div class="media-content px-3 align-self-center mbr-white py-2">
                 <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>
-                   Черняк Николай</strong></p>
+                   Черняк Николай -&gt;</strong></p>
                 <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">
                    Архитектор</span></p>
                 <p class="mbr-author-desc mbr-fonts-style display-7">
@@ -164,7 +162,7 @@
             </div>
 
             <div class="mbr-figure pl-lg-5" style="width: 50%;">
-              <img src="assets/images/13-510x510.png" alt="" title="">
+              <a href="https://github.com/cmpunk551"><img src="assets/images/13-510x510.png" alt="" title=""></a>
             </div>
         </div>
     </div>
@@ -179,11 +177,10 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure pr-lg-5" style="width: 50%;">
-              <img src="assets/images/14-400x400.png" alt="" title="">
+              <a href="https://github.com/riccchforever"><img src="assets/images/14-400x400.png" alt="" title=""></a>
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>
-                       Рудов Илья</strong></p>
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>&lt;- Рудов Илья</strong></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">
                        Тестировщик</span></p>
                     <p class="mbr-author-desc mbr-fonts-style display-7"></p>
