--- a/lab4.html
+++ b/lab4.html
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Перечень работ</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="lab1.html">Лабораторная 1</a><a class="text-white dropdown-item display-4" href="lab2.html" aria-expanded="false">Лабораторная 2</a><a class="text-white dropdown-item display-4" href="lab3.html" aria-expanded="false">Лабораторная 3</a><a class="text-white dropdown-item display-4" href="lab4.html" aria-expanded="false">Лабораторная 4</a></div>
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Перечень работ</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="lab1.html">Лабораторная 1</a><a class="text-white dropdown-item display-4" href="lab2.html" aria-expanded="false">Лабораторная 2</a><a class="text-white dropdown-item display-4" href="lab3.html" aria-expanded="false">Лабораторная 3</a><a class="text-white dropdown-item display-4" href="lab4.html" aria-expanded="false">Лабораторная 4</a></div>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="dream_team.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>
                     
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-rRZ4QWbN1g mbr-parallax-background" id="content5-1a">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-rRZ4QWbN1g mbr-parallax-background" id="content5-1a">
 
     
 
