--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ clock();
     
 </section>
 
+  <div id="clock"></div>
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
