--- a/lab1.html
+++ b/lab1.html
@@ -170,6 +170,7 @@ clock();
     </figure>
 </section>
 
+  <div id="clock"></div>
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
