--- a/lab3.html
+++ b/lab3.html
@@ -19,7 +19,20 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+  <script>	
+function clock(){
+ var date = new Date(),
+ day = (date.getDate() < 10) ? '0' + date.getDate() : date.getDate(),
+ month = (date.getMonth() < 10) ? '0' + date.getMonth() : date.getMonth(),
+ year = date.getFullYear(),
+ hours = (date.getHours() < 10) ? '0' + date.getHours() : date.getHours(),
+ minutes = (date.getMinutes() < 10) ? '0' + date.getMinutes() : date.getMinutes(),
+ seconds = (date.getSeconds() < 10) ? '0' + date.getSeconds() : date.getSeconds();
+ document.getElementById('clock').innerHTML = day + '.' + month + '.' + year + ' ' + hours + ':' + minutes + ':' + seconds;
+}
+setInterval(clock, 1000);
+clock();
+</script>
   
 </head>
 <body>
@@ -101,7 +114,8 @@
     </div>
 </section>
 
-
+<div id="clock"></div>
+  
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
