create github pages

--- a/dream_team.html
+++ b/dream_team.html
@@ -19,20 +19,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <script>	
-function clock(){
- var date = new Date(),
- day = (date.getDate() < 10) ? '0' + date.getDate() : date.getDate(),
- month = (date.getMonth()+1) < 10 ? '0' + (date.getMonth()+1) : (date.getMonth()+1),
- year = date.getFullYear(),
- hours = (date.getHours() < 10) ? '0' + date.getHours() : date.getHours(),
- minutes = (date.getMinutes() < 10) ? '0' + date.getMinutes() : date.getMinutes(),
- seconds = (date.getSeconds() < 10) ? '0' + date.getSeconds() : date.getSeconds();
- document.getElementById('clock').innerHTML = day + '.' + month + '.' + year + ' ' + hours + ':' + minutes + ':' + seconds;
-}
-setInterval(clock, 1000);
-clock();
-  </script>
+  
   
 </head>
 <body>
@@ -105,9 +92,8 @@ clock();
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
                     <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>&lt;- Консулова Анна</strong></p>
-                    <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">Владелец продукта</span></p>
-                    <p class="mbr-author-desc mbr-fonts-style display-7">
-                       Мастер</p>
+                    <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">Владелец продукта</span><br><span style="font-weight: normal;">Мастер<br></span><span style="font-weight: normal;"><br></span></p>
+                    <p class="mbr-author-desc mbr-fonts-style display-7">Формирование сроков проекта, контроль выполнения ТЗ и отслеживание ЖЦ продукта.</p>
             </div>
         </div>
     </div>
@@ -125,9 +111,8 @@ clock();
                 <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>
                    Лякишева Марина -&gt;</strong></p>
                 <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">
-                   Дизайнер</span></p>
-                <p class="mbr-author-desc mbr-fonts-style display-7">
-                   Технический писатель<br></p>
+                   Дизайнер</span><br><span style="font-weight: normal;">Технический писатель<br></span></p>
+                <p class="mbr-author-desc mbr-fonts-style display-7">Формирование ТЗ, оформление требований к проекту, создание визуального макета веб-приложения и страницы проекта.</p>
             </div>
 
             <div class="mbr-figure pl-lg-5" style="width: 50%;">
@@ -151,7 +136,7 @@ clock();
             <div class="media-content px-3 align-self-center mbr-white py-2">
                     <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>&lt;- Рубцов Леонид</strong></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">Аналитик</span></p>
-                    <p class="mbr-author-desc mbr-fonts-style display-7"></p>
+                    <p class="mbr-author-desc mbr-fonts-style display-7">Анализ аналогичных приложений, разработка и сопровождение задач проекта, создание пользовательской истории.</p>
             </div>
         </div>
     </div>
@@ -169,9 +154,8 @@ clock();
                 <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>
                    Черняк Николай -&gt;</strong></p>
                 <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">
-                   Архитектор</span></p>
-                <p class="mbr-author-desc mbr-fonts-style display-7">
-                   Программист</p>
+                   Архитектор</span><br><span style="font-weight: normal;">Программист<br></span></p>
+                <p class="mbr-author-desc mbr-fonts-style display-7">Проектирование логики работы веб-приложения, программирование модулей и создание спецификаций для дальнейших тестов.</p>
             </div>
 
             <div class="mbr-figure pl-lg-5" style="width: 50%;">
@@ -196,7 +180,7 @@ clock();
                     <p class="mbr-text testimonial-text mbr-fonts-style display-7"><strong>&lt;- Рудов Илья</strong></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"><span style="font-weight: normal;">
                        Тестировщик</span></p>
-                    <p class="mbr-author-desc mbr-fonts-style display-7"></p>
+                    <p class="mbr-author-desc mbr-fonts-style display-7">Разработка блоков тестирования, проведение основных этапов тестирования и программная реализация тестового набора данных.</p>
             </div>
         </div>
     </div>
@@ -225,8 +209,7 @@ clock();
     </div>
 </section>
 
-<div id="clock"></div>
-  
+
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
