--- a/lab3.html
+++ b/lab3.html
@@ -19,20 +19,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <script>	
-function clock(){
- var date = new Date(),
- day = (date.getDate() < 10) ? '0' + date.getDate() : date.getDate(),
- month = (date.getMonth()+1) < 10 ? '0' + (date.getMonth()+1) : (date.getMonth()+1),
- year = date.getFullYear(),
- hours = (date.getHours() < 10) ? '0' + date.getHours() : date.getHours(),
- minutes = (date.getMinutes() < 10) ? '0' + date.getMinutes() : date.getMinutes(),
- seconds = (date.getSeconds() < 10) ? '0' + date.getSeconds() : date.getSeconds();
- document.getElementById('clock').innerHTML = day + '.' + month + '.' + year + ' ' + hours + ':' + minutes + ':' + seconds;
-}
-setInterval(clock, 1000);
-clock();
-</script>
+  
   
 </head>
 <body>
@@ -61,7 +48,7 @@ clock();
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown open">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Перечень работ</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="lab1.html">Лабораторная 1</a><a class="text-white dropdown-item display-4" href="lab2.html" aria-expanded="false">Лабораторная 2</a><a class="text-white dropdown-item display-4" href="lab3.html" aria-expanded="false">Лабораторная 3</a><a class="text-white dropdown-item display-4" href="lab4.html" aria-expanded="false">Лабораторная 4</a></div>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="dream_team.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>
@@ -71,7 +58,7 @@ clock();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-rRZ4DK4EAx mbr-parallax-background" id="content5-18">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-rRZ4DK4EAx mbr-parallax-background" id="content5-18">
 
     
 
@@ -114,8 +101,7 @@ clock();
     </div>
 </section>
 
-<div id="clock"></div>
-  
+
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
