--- a/lab4.html
+++ b/lab4.html
@@ -19,20 +19,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <script>	
-function clock(){
- var date = new Date(),
- day = (date.getDate() < 10) ? '0' + date.getDate() : date.getDate(),
- month = (date.getMonth()+1) < 10 ? '0' + (date.getMonth()+1) : (date.getMonth()+1),
- year = date.getFullYear(),
- hours = (date.getHours() < 10) ? '0' + date.getHours() : date.getHours(),
- minutes = (date.getMinutes() < 10) ? '0' + date.getMinutes() : date.getMinutes(),
- seconds = (date.getSeconds() < 10) ? '0' + date.getSeconds() : date.getSeconds();
- document.getElementById('clock').innerHTML = day + '.' + month + '.' + year + ' ' + hours + ':' + minutes + ':' + seconds;
-}
-setInterval(clock, 1000);
-clock();
-</script>
+  
   
 </head>
 <body>
@@ -71,7 +58,7 @@ clock();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-rRZ4QWbN1g mbr-parallax-background" id="content5-1a">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="mbr-section content5 cid-rRZ4QWbN1g mbr-parallax-background" id="content5-1a">
 
     
 
@@ -125,7 +112,6 @@ clock();
     </div>
 </section>
 
-  <div id="clock"></div>
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
