--- a/project.html
+++ b/project.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-rSn5Uw8F8X mbr-parallax-background" id="content5-1s">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content5 cid-rSn5Uw8F8X mbr-parallax-background" id="content5-1s">
 
     
 
@@ -85,7 +85,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-8"><p><strong>1. <b>Эпик</b></strong></p><p><a href="https://okoff.gitbooks.io/proektirovanie-is/content/prilozhenie-1.html">Задача №1</a></p><p><strong>2. Проект</strong></p><p>Интерфейс (приложение и проект визуализации моделей)</p><p><strong>3. Задача</strong></p><p>Функция (программная реализация функции)</p><p><strong>4. Пользовательская история</strong></p><p><span style="font-size: 1.5rem;">Как пользователь, я хочу получить ассоциации элементов диаграммы IDEF0 с элементами диаграммы классов (UML Class)</span></p><p>Пользовательская история РП: ссылка (ее пока нет, но будет)</p><p><strong>5. Техническое задание</strong></p><p>Доступно по ссылке: <a href="https://github.com/stankin/oop-app/wiki/json-to-uml:-%D0%A2%D1%80%D0%B5%D0%B1%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F">техническое задание</a></p><p><strong>6. Алгоритм работы веб-приложения</strong></p><p>Доступен по ссылке: <a href="https://github.com/stankin/oop-app/wiki/json-to-uml:-%D0%90%D0%BB%D0%B3%D0%BE%D1%80%D0%B8%D1%82%D0%BC">алгоритм</a></p><p><br></p><p><em><strong>Канбан-доска:</strong></em><span style="font-size: 1.5rem;"> </span><a href="https://github.com/stankin/oop-app/projects/3" style="font-size: 1.5rem; background-color: rgb(255, 255, 255);">ссылка</a><br></p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-8"><p><strong>Полный отчет о работе представлен в репозитории проекта на GitHub: <a href="https://github.com/stankin/oop-app/wiki/json-to-uml-class">ссылка</a></strong></p></div>
         </div>
     </div>
 </section>
